--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -57,9 +57,15 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'logout' %}">
                             &nbsp;&nbsp;<span class="fas fa-power-off"></span>&nbsp;Logout
                         </a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'signup' %}">
+                            &nbsp;&nbsp;<span class="fas fa-user-plus"></span>&nbsp;SignUp
+                        </a>
+                        {% endif %}
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">
