--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -30,14 +30,14 @@
             </div>
 
             <div class="col-md-4 ">
-                <button type="button" id="backward" class="btn btn-default" aria-label="Backward" onclick="backwardPlay()">
-                    <span aria-hidden="true"><i class="fas fa-step-backward fa-3x"></i></span>
+                <button type="button" id="backward" class="btn btn-default peach-gradient .btn-sm" aria-label="Backward" onclick="backwardPlay()">
+                    <span aria-hidden="true"><i class="fas fa-step-backward fa-2x"></i></span>
                 </button>
-                <button type="button" id="play-or-pause" class="btn btn-default" aria-label="Play Music" onclick="togglePlay()"> 
-                    <span aria-hidden="true"><i id="play-or-pause-icon" class="fas fa-play-circle fa-3x"></i></span>
+                <button type="button" id="play-or-pause" class="btn btn-default peach-gradient .btn-sm" aria-label="Play Music" onclick="togglePlay()"> 
+                    <span aria-hidden="true"><i id="play-or-pause-icon" class="fas fa-play-circle fa-2x"></i></span>
                 </button>
-                <button type="button" id="forward" class="btn btn-default" aria-label="Forward" onclick="forwardPlay()">
-                    <span aria-hidden="true"><i class="fas fa-step-forward fa-3x"></i></span>
+                <button type="button" id="forward" class="btn btn-default peach-gradient .btn-sm" aria-label="Forward" onclick="forwardPlay()">
+                    <span aria-hidden="true"><i class="fas fa-step-forward fa-2x"></i></span>
                 </button>
 
             </div>
