--- a/music/static/music/style.css
+++ b/music/static/music/style.css
@@ -1,19 +1,32 @@
 body{
-    background: white url("images/newbg.jpg");
+    background: #00B4DB;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0083B0, #00B4DB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     margin-bottom: 90px;
 }  
  .navbar-brand {
     font-family: 'Satisfy', cursive; 
 } 
-
+.album-page {
+    margin-top: 67px;
+}
 .bgcol {
     background-color: #5CDB95;
 }
-
+.jumbotron {
+    padding:10px;
+}
 footer {
     display: flex;
     align-items: center;
     height: 90px;
+}
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+
 }
 .song-cover {
     max-width: 100px;
