--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -6,31 +6,82 @@
 
 </head>
 {% block body %}
-<div class="container">
+
+<style>
+    .list-group .list-group-item:hover {
+        background-color: #f5f5f5;
+    }
+
+    .list-group .list-group-item:hover .move {
+        padding-left: 2%;
+        transition-property: padding-left;
+        -moz-transition-property: padding-left;
+        /* Firefox 4 */
+        -webkit-transition-property: padding-left;
+        /* Safari and Chrome */
+        -o-transition-property: padding-left;
+        /* Opera */
+
+        transition-duration: 0.6s;
+        -moz-transition-duration: 0.6s;
+        /* Firefox 4 */
+        -webkit-transition-duration: 0.6s;
+        /* Safari and Chrome */
+        -o-transition-duration: 0.6s;
+        /* Opera */
+
+        transition-timing-function: ease;
+        -moz-transition-timing-function: ease;
+        /* Firefox 4 */
+        -webkit-transition-timing-function: ease;
+        /* Safari and Chrome */
+        -o-transition-timing-function: ease;
+        /* Opera */
+
+    }
+</style>
+<div class="container"
+    style="margin-top: 66.5px; margin-bottom: 140px; background: #fff; padding: 0%; padding-bottom: 4%;">
     <div class="jumbotron" style="background: #1A2980;  /* fallback for old browsers */
             background: -webkit-linear-gradient(to bottom, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
             background: linear-gradient(to bottom, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             ">
+        <div class="row">
+            <div class="col-md-4 overlay zoom">
+                <img class="img-fluid img-thumbnail" src="{{ album.album_logo.url }}"
+                    style="position: absolute; margin-top: 30px; margin-left: 15px;" alt="">
+            </div>
+            <div class="col-md-7 " style="margin-top: 30px; padding-left: 5%; color: white;">
+                <h1> {{ album.album_title }} </h1>
+                <br>
+                <h3> - {{ album.artist }}</h3>
+
+
+            </div>
+        </div>
 
     </div>
-    <img class="thumbnail" src="{{ album.album_logo.url }}" style="margin-top: -90px; margin-left: 90px;" alt="">
+    <div class="col-md-7 offset-md-5">
+        <ul class="list-group list-group-flush">
+            {% for song in album.song_set.all %}
+            <li class="list-group-item">
+                <span style="display:flex; align-items: center;">
+                    <button class="btn btn-sm" id="{{ forloop.counter0 }}">
+                        <i class="far fa-play-circle fa-3x text-muted" style="padding-right: 4px;"></i>
+                    </button>
+                    <span class="move">{{ song.song_title }}</span>
+                    <span class="text-muted" style="margin-left:auto;">{{ song.duration }}</span>
+                </span>
+
+            </li>
+            {% if song.is_favourite %}
+            <img src="http://icons.iconarchive.com/icons/fasticon/web-2/16/Favorite-icon.png" />
+            {% endif %}<br>
+            {% endfor %}
+        </ul>
+
+    </div>
 </div>
-<img src="{{ album.album_logo.url }}" alt="Image cannot be shown">
-<h1> {{ album.album_title }} </h1>
-<br>
-<h3> - {{ album.artist }}</h3>
-<br>
-{% for song in album.song_set.all %}
-{{ song.song_title }}
-
-{% if song.is_favourite %}
-<img src="http://icons.iconarchive.com/icons/fasticon/web-2/16/Favorite-icon.png" />
-{% endif %}<br>
-{% endfor %}
-
-
-
-
 
 
 <footer class="fixed-bottom bgcol">
@@ -84,6 +135,7 @@
         upload: "{{ song.upload.url }}"
     }
     {% endfor %}
-    ]
+    ];
+
 </script>
 {% endblock %}
