--- a/music/static/music/style.css
+++ b/music/static/music/style.css
@@ -33,3 +33,34 @@ footer {
     height: 80px;
     margin-right: 5%;
 }
+.list-group .list-group-item:hover {
+    background-color: #f5f5f5;
+}
+
+.list-group .list-group-item:hover .move {
+    padding-left: 2%;
+    transition-property: padding-left;
+    -moz-transition-property: padding-left;
+    /* Firefox 4 */
+    -webkit-transition-property: padding-left;
+    /* Safari and Chrome */
+    -o-transition-property: padding-left;
+    /* Opera */
+
+    transition-duration: 0.6s;
+    -moz-transition-duration: 0.6s;
+    /* Firefox 4 */
+    -webkit-transition-duration: 0.6s;
+    /* Safari and Chrome */
+    -o-transition-duration: 0.6s;
+    /* Opera */
+
+    transition-timing-function: ease;
+    -moz-transition-timing-function: ease;
+    /* Firefox 4 */
+    -webkit-transition-timing-function: ease;
+    /* Safari and Chrome */
+    -o-transition-timing-function: ease;
+    /* Opera */
+
+}
