song list ready

--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -10,7 +10,7 @@
     <ul>
         <div class="row">
             {% for a in album_list %}
-            <div class="col-sm-4">
+            <div class="col-sm-4" style="margin-bottom: 30px;">
 
                 <div class="card " style="width: 18rem;">
                     <div class="view overlay rounded-top rounded-bottom">
