--- a/music/templates/music/songlist.html
+++ b/music/templates/music/songlist.html
@@ -1,34 +1,93 @@
 {% extends 'music/base.html' %}
 
 {% block body %}
-
-<h1>This is The list of Songs: </h1>
-<div class="container">
-    <ul class="list-group list-group-flush">
-        {% for song in song_list %}
-        <li class="list-group-item">
-            <span style="display:flex; align-items: center;">
-                <button class="btn btn-sm" id="{{ forloop.counter0 }}">
-                    <i class="far fa-play-circle fa-3x text-muted" style="padding-right: 4px;"></i>
-                </button>
-                <span class="move"><a href="#">{{ song.song_title }}</a></span>
-                <span class="text-muted" style="margin-left:auto;">{{ song.duration }}</span>
-                <form method="post" style="margin-left:auto;">
-                    {% csrf_token %}
-                    <input type="hidden" value="{{ a.id }}">
-                    <button type="submit" class="btn btn-default btn-sm">
-                        <span class="fa fa-trash"> </span>
+<div class="container" style="margin-top: 66.5px;">
+    <h2 style="color:white;">All Songs: </h2>
+    <div class="container" style="padding-bottom:50px;">
+        <ul class="list-group list-group-flush">
+            {% for song in song_list %}
+            <li class="list-group-item">
+                <span style="display:flex; flex-direction: row; align-items: center;">
+                    <button class="btn btn-sm" id="{{ forloop.counter0 }}">
+                        <i class="far fa-play-circle fa-3x text-muted" style="padding-right: 4px;"></i>
                     </button>
-                </form>                
-            </span>
+                    <span class="move"><a href="#" style="color:inherit;">{{ song.song_title }}</a></span>
+                    <span style=" margin-left: auto; display: flex; align-items: center;">
+                        <span class="text-muted float-left" style="margin-right:8px;">{{ song.duration }}</span>
+                        <form method="post" class="float-right">
+                            {% csrf_token %}
+                            <input type="hidden" value="{{ a.id }}">
+                            <button type="submit" class="btn btn-default btn-sm">
+                                <span class="fa fa-trash"> </span>
+                            </button>
+                        </form>
+                    </span>
 
-        </li>
-        {% if song.is_favourite %}
-        <img src="http://icons.iconarchive.com/icons/fasticon/web-2/16/Favorite-icon.png" />
-        {% endif %}<br>
-        {% endfor %}
-    </ul>
+                </span>
+
+            </li>
+            {% if song.is_favourite %}
+            <img src="http://icons.iconarchive.com/icons/fasticon/web-2/16/Favorite-icon.png" />
+            {% endif %}<br>
+            {% endfor %}
+        </ul>
+    </div>
 </div>
 
 
+
+<footer class="fixed-bottom bgcol">
+    <div class="container">
+        <div class="row d-flex align-items-center">
+            <div class="col-md-2">
+                <img class="song-cover img-fluid rounded float-left"
+                    src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22200%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20200%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_169f6587041%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_169f6587041%22%3E%3Crect%20width%3D%22200%22%20height%3D%22200%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2274.4296875%22%20y%3D%22104.5%22%3E200x200%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                    alt="">
+            </div>
+
+            <div class="col-md-4 ">
+                <button type="button" id="backward" class="btn btn-default peach-gradient .btn-sm" aria-label="Backward"
+                    onclick="backwardPlay()">
+                    <span aria-hidden="true"><i class="fas fa-step-backward fa-2x"></i></span>
+                </button>
+                <button type="button" id="play-or-pause" class="btn btn-default peach-gradient .btn-sm"
+                    aria-label="Play Music" onclick="togglePlay()">
+                    <span aria-hidden="true"><i id="play-or-pause-icon" class="fas fa-play-circle fa-2x"></i></span>
+                </button>
+                <button type="button" id="forward" class="btn btn-default peach-gradient .btn-sm" aria-label="Forward"
+                    onclick="forwardPlay()">
+                    <span aria-hidden="true"><i class="fas fa-step-forward fa-2x"></i></span>
+                </button>
+
+            </div>
+            <div class="col-md-6 " id="audio-player">
+                <audio id="player" preload="auto" ontimeupdate="initProgressBar()" type="audio/mp3"
+                    src="{{ album.song_set.all.first.upload.url }}">
+                </audio>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" id="seekObj"
+                        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                    </div>
+                </div>
+                <small style="float: left; position: relative; left: 15px;" class="start-time">--</small>
+                <small style="float: right; position: relative; right: 20px;" class="end-time">--</small>
+            </div>
+
+
+        </div>
+
+    </div>
+</footer>
+
+<script type="text/javascript">
+    var songs = [
+        {% for song in song_list %}
+    {% if not forloop.first %}, {% endif %}
+    {
+        upload: "{{ song.upload.url }}"
+    }
+    {% endfor %}
+    ];
+
+</script>
 {% endblock %}
