--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,16 +1,47 @@
 {% extends 'music/base.html' %}
 
 {% block body %}
+<style>
+    ul.pagination li {
+        display: flex;
+        align-self: center;
+    }
+</style>
 
-<!-- 
-<h2 class="jumbotron">Recent Albums:</h2> -->
-      
+<div class="container" style="margin-top: 30px;">
+        <nav aria-label="Page navigation example">
+            {% if is_paginated %}
+            <ul class="pagination pg-amber justify-content-center" style="background:white;">
+                {% if page_obj.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled"><a class="page-link">Previous</a></li>
+                {% endif %}
+                {% for i in paginator.page_range %}
+                {% if page_obj.number == i %}
+                <li class="page-item active"><a class="page-link"><span>{{ i }} <span
+                                class="sr-only">(current)</span></span></a></li>
+                {% else %}
+                <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+                {% else %}
+                <li class="page-item disabled"><a class="page-link">Next</a></li>
+                {% endif %}
+            </ul>
+            {% endif %}
+        </nav>
+    </div>
+
 <div class="container album-page">
-
+    
     <ul>
         <div class="row">
             {% for a in album_list %}
-            <div class="col-sm-4" style="margin-bottom: 30px;">
+            <div class="col-sm-4" style="margin-bottom: 50px;">
 
                 <div class="card " style="width: 18rem;">
                     <div class="view overlay rounded-top rounded-bottom">
