--- a/music/templates/music/songlist.html
+++ b/music/templates/music/songlist.html
@@ -1,6 +1,41 @@
 {% extends 'music/base.html' %}
 
 {% block body %}
+<style>
+    ul.pagination li {
+        display: flex;
+        align-self: center;
+    }
+</style>
+<div class="container" style="margin-top: 30px;">
+    <nav aria-label="Page navigation example">
+        {% if is_paginated %}
+        <ul class="pagination pg-amber justify-content-center" style="background:white;">
+            {% if page_obj.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            </li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link">Previous</a></li>
+            {% endif %}
+            {% for i in paginator.page_range %}
+            {% if page_obj.number == i %}
+            <li class="page-item active"><a class="page-link"><span>{{ i }} <span class="sr-only">(current)</span></span></a></li>
+            {% else %}
+            <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+            {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+            {% else %}
+            <li class="page-item disabled"><a class="page-link">Next</a></li>
+            {% endif %}
+        </ul>
+        {% endif %}
+    </nav>
+</div>
+
+
+
 <div class="container" style="margin-top: 66.5px;">
     <h2 style="color:white;">All Songs: </h2>
     <div class="container" style="padding-bottom:50px;">
