--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -43,37 +43,44 @@
                         </a>
                     </li>
                 </ul>
-                <form class="form-inline justify-content-center" role="search" method="GET" action="#">
-                    <div class="form-group">
-                        <input type="search" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
-                        <button type="submit" class="btn btn-outline-success my-2 my-sm-0">
-                            Search
-                        </button>
-                    </div>
-                </form>
-                <ul class="navbar-nav justify-content-md-end d-flex align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'music:album-add' %}">
-                            &nbsp;&nbsp;<span class="fas fa-plus"></span>&nbsp;Add Album
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        {% if user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'logout' %}">
-                            &nbsp;&nbsp;<span class="fas fa-power-off"></span>&nbsp;Logout
-                        </a>
-                        {% else %}
-                        <a class="nav-link" href="{% url 'signup' %}">
-                            &nbsp;&nbsp;<span class="fas fa-user-plus"></span>&nbsp;SignUp
-                        </a>
+                {% if '/songs' in request.path %}
+                <form class="form-inline justify-content-center" role="search" method="GET"
+                    action="{% url 'music:song-list-view'  %}">
+                    {% else %}
+                    <form class="form-inline justify-content-center" role="search" method="GET"
+                        action="{% url 'music:album-list-view'  %}">
                         {% endif %}
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">
-                            <span class="fas fa-user-circle fa-2x"></span>
-                        </a>
-                    </li>
-                </ul>
+                        <div class="form-group">
+                            <input name="q" type="search" class="form-control mr-sm-2" placeholder="Search"
+                                aria-label="Search">
+                            <button type="submit" class="btn btn-outline-success my-2 my-sm-0">
+                                Search
+                            </button>
+                        </div>
+                    </form>
+                    <ul class="navbar-nav justify-content-md-end d-flex align-items-center">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'music:album-add' %}">
+                                &nbsp;&nbsp;<span class="fas fa-plus"></span>&nbsp;Add Album
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'logout' %}">
+                                &nbsp;&nbsp;<span class="fas fa-power-off"></span>&nbsp;Logout
+                            </a>
+                            {% else %}
+                            <a class="nav-link" href="{% url 'signup' %}">
+                                &nbsp;&nbsp;<span class="fas fa-user-plus"></span>&nbsp;SignUp
+                            </a>
+                            {% endif %}
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">
+                                <span class="fas fa-user-circle fa-2x"></span>
+                            </a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </nav>
