--- a/music/templates/registration/login.html
+++ b/music/templates/registration/login.html
@@ -1,7 +1,10 @@
 {% extends 'music/base.html' %}
-{% block title %}Login{% endblock %} 
+{% block title %}Login{% endblock %}
 {% block body %}
-    <h3>Login</h3>
+<div class="container" style="background: white; margin-top: 66.5px;">
+    <h2>Login</h2>
+
+    
     <form action="" method='post' enctype="multipart/form-data">
         {% csrf_token %}
         {% include 'music/form-template.html' %}
@@ -11,4 +14,6 @@
         </button>
 
     </form>
-{% endblock %}  
+</div>
+
+{% endblock %}
