--- a/music/templates/registration/signup.html
+++ b/music/templates/registration/signup.html
@@ -1,7 +1,9 @@
 {% extends 'music/base.html' %}
 {% block title %}Register{% endblock %} 
 {% block body %}
-    <h3>Create a New Account</h3>
+<div class="container" style="background: white; margin-top: 66.5px;">
+
+    <h2>Create a New Account</h2><br>
     <form action="" method='post' enctype="multipart/form-data">
         {% csrf_token %}
         {% include 'music/form-template.html' %}
@@ -11,4 +13,6 @@
         </button>
 
     </form>
+</div>
+
 {% endblock %}  
