--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -75,7 +75,7 @@
                 </button>
 
             </div>
-            <div class="col-md-6 " id="audio-player">
+            <div class="col-md-6 " id="audio-player" style="color:white;">
                 <audio id="player" preload="auto" ontimeupdate="initProgressBar()" type="audio/mp3"
                     src="{{ album.song_set.all.first.upload.url }}">
                 </audio>
