--- a/music/templates/registration/login.html
+++ b/music/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends 'music/base.html' %}
 {% block title %}Login{% endblock %}
 {% block body %}
-<div class="container" style="background: white; margin-top: 66.5px;">
+<div class="container" style="background: white; margin-top: 66.5px;padding-top: 15px;padding-bottom: 15px;">
     <h2>Login</h2>
 
     
@@ -12,8 +12,11 @@
         <button type='submit' class='btn btn-success'>
             Login
         </button>
-
+        <a href="{% url 'signup' %}" style="padding-top:20px;">
+            Are you new User? Then click here to Register.
+        </a>
     </form>
+    
 </div>
 
 {% endblock %}
