--- a/music/templates/registration/signup.html
+++ b/music/templates/registration/signup.html
@@ -11,8 +11,11 @@
         <button type='submit' class='btn btn-success' >
             Submit
         </button>
+        <span>
+            Already Existing User? Then click here to 
+        </span>
         <a href="{% url 'login' %}" style="padding-top:20px;">
-            Already Existing User? Then click here to login
+           login
         </a>
     </form>
 </div>
