--- a/music/static/music/style.css
+++ b/music/static/music/style.css
@@ -29,9 +29,7 @@ footer {
 
 }
 .song-cover {
-    max-width: 100px;
-    height: 80px;
-    margin-right: 5%;
+    max-width: 175px;height: 55px;margin-right: -20px;object-fit: cover;
 }
 .list-group .list-group-item:hover {
     background-color: #f5f5f5;
@@ -70,4 +68,31 @@ footer {
 }
 .progress-bar {
     transition: width .6s ease;
+}
+@media (max-width: 768px) {
+    .btn-responsive {
+      padding:2px 4px;
+      font-size:80%;
+      line-height: 1;
+    }
+  }
+  
+  @media (min-width: 769px) and (max-width: 992px) {
+    .btn-responsive {
+      padding:4px 9px;
+      font-size:90%;
+      line-height: 1.2;
+    }
+  }
+  @media (max-width: 1200px) and (min-width: 370px) {
+    .media-btns {text-align: center}
+.media-btns > button{
+    padding: .375rem .65rem;
+}
+}
+@media (max-width: 370px){
+.media-btns > button{
+    padding: .375rem .50rem;
+    font-size: 0.7em;
+}
 }
