--- a/music/templates/music/album_form.html
+++ b/music/templates/music/album_form.html
@@ -1,17 +1,22 @@
 {% extends 'music/base.html' %}
-{% block title %}Add new Title{% endblock %} 
+{% block title %}Album{% endblock %} 
 {% block body %}
-<div class="container" style="margin-top:66.6px; color:white;">
-    <h3>Add Album:</h3>
-    <form action="" method='post' enctype="multipart/form-data">
-        {% csrf_token %}
-        {% include 'music/form-template.html' %}
-        <br>
-        <button type='submit' class='btn btn-success'>
-            Submit
-        </button>
-
-    </form>
-</div>
-   
+  
+<div class="container" style="background: white; margin-top: 66.5px;padding-top: 20px;padding-bottom: 20px;">
+        <h2>{% if 'add' in request.path %}
+            Add
+            {% else %}
+            Edit
+            {% endif %}
+            Album
+        </h2>
+        <form action="" method='post' enctype="multipart/form-data" style="margin-top: 15px;">
+            {% csrf_token %}
+            {% include 'music/form-template.html' %}
+            <br>
+            <button type='submit' class='btn btn-success'>
+                Submit
+            </button>
+        </form>
+    </div>
 {% endblock %}  
