--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -37,11 +37,13 @@
     </div>
 
 <div class="container album-page">
-    
+    {% if 'search' in request.path %}
+    <h2 style="color:white;">Search Result: {{album_list|length}}{% if album_list|length <= 1 %} album{% else %} albums{% endif %} found</h2>
+    {% endif %}
     <ul>
         <div class="row">
             {% for a in album_list %}
-            <div class="col-sm-4" style="margin-bottom: 50px;">
+            <div class="col-sm-8 col-md-6 col-lg-4" style="margin-bottom: 50px;">
 
                 <div class="card " style="width: 18rem;">
                     <div class="view overlay rounded-top rounded-bottom">
@@ -57,17 +59,31 @@
                             of
                             the
                             card's content.</p>
-                        <form method="post" action="{% url 'music:album-delete' a.id %}" style="display: inline">
-                            {% csrf_token %}
-                            <input type="hidden" value="{{ a.id }}">
-                            <button type="submit" class="btn btn-dark btn-sm">
-                                <span class="fa fa-trash">
-
-                                </span>
-
-                            </button>
-
-                        </form>
+                        <div style='display: flex;flex-flow:row; justify-content:space-between;'>
+                            <a href="{% url 'music:album-update' a.id %}"><button class="btn btn-success btn-sm"><span class="fa fa-edit"></span></button></a>
+                            <!-- <form method="post" action="{% url 'music:album-update' a.id %}" style="display: inline">
+                                {% csrf_token %}
+                                <input type="hidden" value="{{ a.id }}">
+                                <button type="submit" class="btn btn-success btn-sm" >
+                                    <span class="fa fa-edit"></span>
+    
+                                </button>
+    
+                            </form> -->
+                            <form method="post" action="{% url 'music:album-delete' a.id %}" style="display: inline">
+                                {% csrf_token %}
+                                <input type="hidden" value="{{ a.id }}">
+                                <button type="submit" class="btn btn-dark btn-sm">
+                                    <span class="fa fa-trash">
+    
+                                    </span>
+    
+                                </button>
+    
+                            </form>
+                            
+                        </div>
+                        
                     </div>
                 </div>
 
