--- a/music/templates/music/songlist.html
+++ b/music/templates/music/songlist.html
@@ -41,7 +41,7 @@
     {% if 'search' not in request.path %}
     <h2 style="color:white;">All Songs: </h2>
     {% else %}
-    <h2 style="color:white;">Search Result: </h2>
+    <h2 style="color:white;">Search Result: {{song_list|length}}{% if song_list|length <= 1 %} song{% else %} songs{% endif %} found</h2>
     {% endif %}
     <div class="container" style="padding-bottom:50px;">
         <ul class="list-group list-group-flush">
@@ -54,6 +54,13 @@
                     <span class="move"><a href="#" style="color:inherit;">{{ song.song_title }}</a></span>
                     <span style=" margin-left: auto; display: flex; align-items: center;">
                         <span class="text-muted float-left" style="margin-right:8px;">{{ song.duration }}</span>
+                        <span>
+                            <a href="{% url 'music:song-update' song.id %}">
+                                <button class="btn btn-sm" style="background-color: #ff6f00; color:white">
+                                    <i class="fas fa-pencil-alt"></i>
+                                </button>
+                            </a>
+                        </span>
                         <!-- <form method="post" class="float-right">
                             {% csrf_token %}
                             <input type="hidden" value="{{ a.id }}">
@@ -77,7 +84,7 @@
 
 
 <footer class="fixed-bottom bgcol">
-    <div class="container">
+    <!-- <div class="container">
         <div class="row d-flex align-items-center">
             <div class="col-md-1">
                 <img class="song-cover img-fluid rounded float-left" style="padding-right: 5px;" src="" id="song-img"
@@ -88,15 +95,15 @@
             </div>
 
             <div class="col-md-4 ">
-                <button type="button" id="backward" class="btn btn-default peach-gradient .btn-sm" aria-label="Backward"
+                <button type="button" id="backward" class="btn btn-default peach-gradient btn-responsive" aria-label="Backward"
                     onclick="backwardPlay()">
                     <span aria-hidden="true"><i class="fas fa-step-backward fa-2x"></i></span>
                 </button>
-                <button type="button" id="play-or-pause" class="btn btn-default peach-gradient .btn-sm"
+                <button type="button" id="play-or-pause" class="btn btn-default peach-gradient btn-responsive"
                     aria-label="Play Music" onclick="togglePlay()">
                     <span aria-hidden="true"><i id="play-or-pause-icon" class="fas fa-play-circle fa-2x"></i></span>
                 </button>
-                <button type="button" id="forward" class="btn btn-default peach-gradient .btn-sm" aria-label="Forward"
+                <button type="button" id="forward" class="btn btn-default peach-gradient btn-responsive" aria-label="Forward"
                     onclick="forwardPlay()">
                     <span aria-hidden="true"><i class="fas fa-step-forward fa-2x"></i></span>
                 </button>
@@ -116,7 +123,44 @@
 
 
         </div>
-    </div>
+    </div> -->
+    <div class="container-fluid">
+            <div class="row row-xs d-flex align-items-center">
+                <div class="col-4">
+               <div class="row align-items-center">
+                   <img class="song-cover rounded col-auto" src="/media/Pack-Shot_0.jpg" id="song-img" alt="">
+                   <div class="col-8 align-items-middle" style="color:white;">
+                    <a href="#" id="song-title" style="color:inherit;">Eraser</a>
+                </div></div>
+        </div>
+    
+    <div class="col-7">
+               <div class="row align-items-center">
+                   
+         <div class="col-sm-12 col-md-6 media-btns" style="padding-right: 10px;padding-left: 10px;">
+                    <button type="button" id="backward" class="btn btn-default peach-gradient btn-responsive waves-effect waves-light" aria-label="Backward" onclick="backwardPlay()">
+                        <span aria-hidden="true"><i class="fas fa-step-backward fa-2x"></i></span>
+                    </button>
+                    <button type="button" id="play-or-pause" class="btn btn-default peach-gradient btn-responsive waves-effect waves-light" aria-label="Play Music" onclick="togglePlay()">
+                        <span aria-hidden="true"><i id="play-or-pause-icon" class="fas fa-play-circle fa-2x"></i></span>
+                    </button>
+                    <button type="button" id="forward" class="btn btn-default peach-gradient btn-responsive waves-effect waves-light" aria-label="Forward" onclick="forwardPlay()">
+                        <span aria-hidden="true"><i class="fas fa-step-forward fa-2x"></i></span>
+                    </button>
+    
+                </div>          <div class="col-sm-12 col-md-6" id="audio-player" style="color:white;">
+                    <audio id="player" preload="auto" ontimeupdate="initProgressBar()" type="audio/mp3" src="/media/Divide-By-Ed-sheeren/Ed_Sheeran_-_Eraser_Official_Audio.mp3">
+                    </audio>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" id="seekObj" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                        </div>
+                    </div>
+                    <small style="float: left; position: relative; left: 15px;" class="start-time">--</small>
+                    <small style="float: right; position: relative; right: 20px;" class="end-time">--</small>
+                </div></div></div>
+            
+            </div>
+        </div>
 </footer>
 
 <script type="text/javascript">
@@ -125,8 +169,8 @@
     {% if not forloop.first %}, {% endif %}
     {
         upload: "{{ song.upload.url }}",
-        album_logo: "{{ song.album.album_logo.url }}" ,
-        title: "{{ song.song_title }}"
+            album_logo: "{{ song.album.album_logo.url }}",
+                title: "{{ song.song_title }}"
     }
     {% endfor %}
     ];
