--- a/music/templates/registration/login.html
+++ b/music/templates/registration/login.html
@@ -12,8 +12,9 @@
         <button type='submit' class='btn btn-success'>
             Login
         </button>
+        <span>Are you new User? Then click here to </span>
         <a href="{% url 'signup' %}" style="padding-top:20px;">
-            Are you new User? Then click here to Register.
+            Register.
         </a>
     </form>
     
